--- a/book/html/page3.html
+++ b/book/html/page3.html
@@ -59,32 +59,17 @@
       <div class="col-md-1"></div>
       <div
         class="col-md-10"
-        style="border-bottom: 1px solid #eee; margin-bottom: 20px;"
+        style="border-bottom: 1px solid #eee; margin-bottom: 20px"
       >
         <div class="class_man item_text">
-          <h4 style="float: left; font-weight: 700;">常见问题:</h4>
-          <span style="float: right; margin-top: 20px;"
+          <h4 style="float: left; font-weight: 700">常见问题:</h4>
+          <span style="float: right; margin-top: 20px"
             >您在这里:<a href="index.html">首页</a>>帮助</span
           >
         </div>
       </div>
       <div class="col-md-1"></div>
     </div>
-  <div class="col-md-12 help" >
-    <div class="col-md-8 col-md-offset-1">
-      <div class="panel panel-info" v-for="(item,index) in helpArr">
-        <div class="panel-heading" @click="change(index)">
-          <span class="iconfont" v-bind:class="isMore[index]?'icon-jian':'icon-jia'"></span>
-          <a href="##">
-          <span>{{item.q}}</span>
-          </a>
-        </div>
-        <transition name="fade">
-          <div class="panel-body p-body" v-html="item.a" v-show="isMore[index]"></div>
-        </transition>
-      </div>
-    </div>
-  </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
