--- a/book/html/page5.html
+++ b/book/html/page5.html
@@ -59,11 +59,11 @@
       <div class="col-md-1"></div>
       <div
         class="col-md-10"
-        style="border-bottom: 1px solid #eee; margin-bottom: 20px;"
+        style="border-bottom: 1px solid #eee; margin-bottom: 20px"
       >
         <div class="class_man item_text">
-          <h4 style="float: left; font-weight: 700;">注册:</h4>
-          <span style="float: right; margin-top: 20px;"
+          <h4 style="float: left; font-weight: 700">注册:</h4>
+          <span style="float: right; margin-top: 20px"
             >您在这里:<a href="index.html">首页</a>>注册</span
           >
         </div>
@@ -85,6 +85,19 @@
                 class="form-control"
                 placeholder="请输入："
                 v-model="us_name"
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-md-2 user col-md-offset-5">
+              <p>请输入你的常用邮箱:</p>
+              <input
+                type="email"
+                @keyup="errorF"
+                class="form-control"
+                placeholder="请输入："
+                v-model="email"
               />
             </div>
           </div>
@@ -112,14 +125,47 @@
               />
             </div>
           </div>
+
+          <div class="form-group">
+            <div class="col-md-2 user col-md-offset-5">
+              <label class="radio-inline">
+                <input
+                  type="radio"
+                  value="学生"
+                  name="inlineRadioOptions"
+                  v-model="picked"
+                />
+                学生
+              </label>
+              <label class="radio-inline">
+                <input
+                  type="radio"
+                  value="教师"
+                  v-model="picked"
+                  name="inlineRadioOptions"
+                />
+                教师
+              </label>
+            </div>
+          </div>
+          <div class="form-group" v-show="picked==='教师'">
+            <div class="col-md-2 user col-md-offset-5">
+              <p>请选择您的职称：</p>
+              <select class="form-control">
+                <option>讲师</option>
+                <option>助教</option>
+                <option>副教授以上</option>
+              </select>
+            </div>
+          </div>
           <div class="form-group">
             <div class="col-md-2 col-md-offset-5">
-              <div class="login_b" style="float: left;">
+              <div class="login_b" style="float: left">
                 <button @click="click" type="button" class="btn btn-primary">
                   完成
                 </button>
               </div>
-              <div class="have">已有账号？<a href="page4.html">去登录</a></div>
+              <div class="have">已有账号？去<a href="page4.html">登录</a></div>
             </div>
           </div>
         </form>
