--- a/book/html/page2.html
+++ b/book/html/page2.html
@@ -122,6 +122,7 @@
                       class="btn btn-primary"
                       :class="item.is_borrow?'':'disabled'"
                       style="padding-top: 2px; padding-bottom: 2px"
+                      @click="borrow(item.id)"
                     >
                       借阅
                     </button>
