--- a/book/html/page4.html
+++ b/book/html/page4.html
@@ -58,11 +58,11 @@
       <div class="col-md-1"></div>
       <div
         class="col-md-10"
-        style="border-bottom: 1px solid #eee; margin-bottom: 20px;"
+        style="border-bottom: 1px solid #eee; margin-bottom: 20px"
       >
         <div class="class_man item_text">
-          <h4 style="float: left; font-weight: 700;">登录:</h4>
-          <span style="float: right; margin-top: 20px;"
+          <h4 style="float: left; font-weight: 700">登录:</h4>
+          <span style="float: right; margin-top: 20px"
             >您在这里:<a href="index.html">首页</a>>登录</span
           >
         </div>
@@ -92,15 +92,18 @@
               <input type="password" class="form-control" placeholder="密码" />
             </div>
           </div>
+          <div class="input-group col-md-2 user col-md-offset-5">
+            没有账号？去<a href="./page5.html">注册</a>
+          </div>
           <div class="form-group">
-            <div class="col-md-2 col-md-offset-5" style="padding: 0;">
+            <div class="col-md-2 col-md-offset-5" style="padding: 0">
               <div class="checkbox login_c">
                 <label>
                   <input type="checkbox" />
                   记住密码
                 </label>
               </div>
-              <div class="login_b" style="float: right;">
+              <div class="login_b" style="float: right">
                 <button onclick="login()" type="button" class="btn btn-primary">
                   登录
                 </button>
